--- a/ScaledVisibleCellsCollectionViewExample/Podfile
+++ b/ScaledVisibleCellsCollectionViewExample/Podfile
@@ -1,10 +1,10 @@
-source 'https://github.com/CocoaPods/Specs.git'
+
 use_frameworks!
 
-target 'ScaledVisibleCellsCollectionView_Example', :exclusive => true do
+target 'ScaledVisibleCellsCollectionView_Example' do
   pod "ScaledVisibleCellsCollectionView", :path => "../"
 end
 
-target 'ScaledVisibleCellsCollectionView_Tests', :exclusive => true do
+target 'ScaledVisibleCellsCollectionView_Tests' do
   pod "ScaledVisibleCellsCollectionView", :path => "../"
 end
